# ConcurrentPrime

./: CMakeLists.txt  PrimeComputer.cpp  PrimeComputer.h  main.cpp  readme.md
